tranzisztor, de még mindig typecheckes